# Sudoku_Terminal

./: CMakeLists.txt  LICENSE  README.md  build_mac.sh  build_windows.bat  main.c
.github/workflows/: cmake.yml
include/: criador.h  game_dao.h  historico.h  solucionador.h  sudokugrid.h
src/: criador.c  game_dao.c  historico.c  solucionador.c
